<resources>
    <string name="app_name">Parking System Kotlin</string>
    <string name="text_main_activity_parking">Welcome to the Parking</string>
    <string name="button_main_select_parking">Select Parking Spaces</string>
    <string name="text_view_dialog_fragment_set_space">Amount of spaces</string>
    <string name="text_button_dialog_fragment_ok">OK</string>
    <string name="toast_main_activity_select_space_parking">Amount of space selected: %1$d</string>
    <string name="button_main_book_parking_spaces">Reserve a Parking Lot</string>
    <string name="text_activity_parking_title">BOOK YOUR PARKING LOT HERE</string>
    <string name="text_button_reserver_parking_inic">Start</string>
    <string name="text_button_reserver_parking_end">End</string>
    <string name="text_edit_reserver_parking_place">ENTER THE PLACE HERE…</string>
    <string name="text_edit_reserver_parking_code">ENTER THE CODE HERE…</string>
    <string name="text_button_reserver_parking_save">Save</string>
    <string name="fragment_date_picker_text_cancel">Cancele</string>
    <string name="fragment_date_picker_text_ok">OK</string>
    <string name="toast_resaervation_parking">your lot number %1$d and your code is %2$d \n Start date: %3$s \n End date: %4$s</string>
    <string name="toast_reservation_overlap">Error: There is already a reservation in that space and time!</string>
    <string name="toast_reservation_ok">reservation successfully saved!</string>
    <string name="toast_reservation_missing_code">enter the code, please</string>
    <string name="toast_reservation_overlap_missing_lot">enter the lot, please</string>
    <string name="toast_reservation_missing_date">enter the date, please</string>
    <string name="toast_format_erro">Error in calendar format, please try again!</string>
</resources>
